# sdk

./: .gitignore  .release-please-manifest.json  README.md  release-please-config.json
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/planir/: README.md  __init__.py  _default_clients.py  client.py  environment.py  reference.md
python/src/planir/.fern/: metadata.json
python/src/planir/core/: client_wrapper.py
python/src/planir/errors/: __init__.py  bad_request_error.py  content_too_large_error.py  forbidden_error.py  payment_required_error.py  service_unavailable_error.py  unauthorized_error.py  unprocessable_entity_error.py
python/src/planir/health/: client.py  raw_client.py
python/src/planir/meta/: client.py  raw_client.py
python/src/planir/presets/: client.py  raw_client.py
python/src/planir/regions/: client.py  raw_client.py
python/src/planir/runtimes/: __init__.py  client.py  raw_client.py
python/src/planir/team/: client.py  raw_client.py
python/src/planir/tests/: test_aiohttp_autodetect.py
python/src/planir/types/: __init__.py  api_key.py  api_key_list.py  api_key_mint.py  api_version_info.py  api_version_info_version.py  detached_exec.py  detached_exec_status.py  error.py  error_error.py  error_error_code.py  event.py  events_list.py  exec_id.py  exec_list.py  exec_list_execs_item.py  exec_list_execs_item_status.py  exec_not_found_error.py  exec_not_found_error_error.py  exec_not_found_error_error_code.py  exec_request.py  exec_result.py  health_status.py  health_status_status.py  idempotency_conflict_error.py  network_spec.py  (+107 more)
(+171 files in other folders)
